--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
+     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+	<title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
